force-app/main/default/objects/Servicios_del_Modulo__c/Servicios_del_Modulo__c.object-meta.xml
<CustomObject>
    <label>Servicios del Modulo</label>
    <nameField>
        <displayFormat>SDM-{00000}</displayFormat>
        <label>Nombre de Servicios del Modulo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Servicios del Modulo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>