force-app/main/default/objects/Servicios_del_Modulo__c/fields/Modulo_de_paciente__c.field-meta.xml
<CustomField>
    <fullName>Modulo_de_paciente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modulo de paciente</label>
    <referenceTo>Modulo_de_paciente__c</referenceTo>
    <relationshipLabel>Servicios del Modulo</relationshipLabel>
    <relationshipName>Servicios_del_Modulo</relationshipName>
    <type>Lookup</type>
</CustomField>