force-app/main/default/objects/Servicios_del_Modulo__c/fields/Servicios_disponibles__c.field-meta.xml
<CustomField>
    <fullName>Servicios_disponibles__c</fullName>
    <label>Servicios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Servicio visita enfermería</fullName>
            </value>
            <value>
                <fullName>Servicio visita nutricional</fullName>
            </value>
            <value>
                <fullName>Servicio visita medica</fullName>
            </value>
            <value>
                <fullName>Servicio visita especialista en deglución</fullName>
            </value>
            <value>
                <fullName>Rehabilitación_Motora_Plus</fullName>
                <label>Rehabilitación Motora Plus</label>
            </value>
            <value>
                <fullName>Servicio de visita cuidado nutricional completo</fullName>
            </value>
            <value>
                <fullName>Rehabilitacion_Motora_Intermedio</fullName>
                <label>Rehabilitacion Motora - Intermedio</label>
            </value>
            <value>
                <fullName>Rehabilitacion_Motora_basico_Oral</fullName>
                <label>Rehabilitación Motora básico Oral</label>
            </value>
            <value>
                <fullName>Rehabilitacion_Motora_Basico_Enteral</fullName>
                <label>Rehabilitación Motora Básico Enteral</label>
            </value>
            <value>
                <fullName>CUIDADO BÁSICO</fullName>
            </value>
            <value>
                <fullName>Autocuidado</fullName>
                <isActive>false</isActive>
                <label>Autocuidado</label>
            </value>
            <value>
                <fullName>Cuidado_completo</fullName>
                <isActive>false</isActive>
                <label>Cuidado completo</label>
            </value>
            <value>
                <fullName>Ninguno</fullName>
                <isActive>false</isActive>
                <label>Ninguno</label>
            </value>
            <value>
                <fullName>Rehabilitacion_Motora_Basico</fullName>
                <isActive>false</isActive>
                <label>Rehabilitacion_Motora_Basico</label>
            </value>
            <value>
                <fullName>Rehabilitación Motora Cuidado Completo</fullName>
                <isActive>false</isActive>
                <label>Rehabilitación Motora Cuidado Completo</label>
            </value>
            <value>
                <fullName>Rehabilitación Motora Cuidado Personalizada</fullName>
                <isActive>false</isActive>
                <label>Rehabilitación Motora Cuidado Personalizada</label>
            </value>
            <value>
                <fullName>Servicio de visita profesionales cuidado nutricional completo</fullName>
                <isActive>false</isActive>
                <label>Servicio de visita profesionales cuidado nutricional completo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>