force-app/main/default/objects/Servicios_del_Modulo__c/fields/Tarea_motora_generada__c.field-meta.xml
<CustomField>
    <fullName>Tarea_motora_generada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tarea motora generada</label>
    <type>Checkbox</type>
</CustomField>